@@ -1,8 +1,10 @@
-import org.glassfish.grizzly.utils.Pair;
 import org.telegram.telegrambots.bots.DefaultBotOptions;
 import org.telegram.telegrambots.bots.TelegramLongPollingBot;
+import org.telegram.telegrambots.meta.api.methods.GetFile;
 import org.telegram.telegrambots.meta.api.methods.send.SendMessage;
 import org.telegram.telegrambots.meta.api.methods.send.SendPhoto;
+import org.telegram.telegrambots.meta.api.objects.Document;
+import org.telegram.telegrambots.meta.api.objects.File;
 import org.telegram.telegrambots.meta.api.objects.Update;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.InlineKeyboardMarkup;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.ReplyKeyboardMarkup;
@@ -11,10 +13,12 @@ import org.telegram.telegrambots.meta.api.objects.replykeyboard.buttons.InlineKe
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.buttons.KeyboardRow;
 import org.telegram.telegrambots.meta.exceptions.TelegramApiException;
 
+import java.io.*;
+import java.net.URL;
 import java.net.URLEncoder;
-import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Scanner;
 
 public class TelegramBot extends TelegramLongPollingBot {
     private static ChatBot chatBot;
@@ -24,14 +28,11 @@ public class TelegramBot extends TelegramLongPollingBot {
 
     private final ReplyKeyboardRemove noKeyboard = new ReplyKeyboardRemove();
 
-    private final String vkShareUrl = "https://vk.com/share.php?url=%s&title=%s&image=%s";
+    protected final String vkShareUrl = "https://vk.com/share.php?url=%s&title=%s&image=%s";
 
     TelegramBot(DefaultBotOptions botOptions) {
         super(botOptions);
-        var tests = new ArrayList<Pair<String, Class<? extends IGame>>>();
-        tests.add(new Pair<>("winx", WinxQuiz.class));
-        tests.add(new Pair<>("pixie.yml", PixieQuiz.class));
-        chatBot = new ChatBot(new GameFactory(), tests);
+        chatBot = new ChatBot();
         try {
             BOT_USERNAME = System.getenv("BOT_USERNAME");
             BOT_TOKEN = System.getenv("BOT_TOKEN");
@@ -48,15 +49,22 @@ public class TelegramBot extends TelegramLongPollingBot {
     }
 
     @Override
-    public String getBotToken() {
-        return BOT_TOKEN;
-    }
+    public String getBotToken() { return BOT_TOKEN; }
 
     @Override
     public void onUpdateReceived(Update update) {
         try {
-            ChatBotReply reply = chatBot.answer(update.getMessage().getText(),
-                    update.getMessage().getFrom().getId());
+            ChatBotReply reply;
+            if (update.getMessage().hasEntities() && update.getMessage().getEntities().get(0).getType().equals("url")) {
+                String content = getFileContent(update.getMessage().getEntities().get(0).getText());
+                reply = chatBot.addQuiz(content);
+            }
+            else if (update.getMessage().hasDocument() && update.getMessage().getDocument().getMimeType().equals("application/x-yaml")) {
+                reply = chatBot.addQuiz(getFileContent(update.getMessage().getDocument()));
+            }
+            else {
+                reply = chatBot.answer(update.getMessage().getText(), update.getMessage().getFrom().getId());
+            }
 
             var sendMessage = new SendMessage(
                     update.getMessage().getChatId(),
@@ -68,7 +76,7 @@ public class TelegramBot extends TelegramLongPollingBot {
             else
                 sendMessage.setReplyMarkup(noKeyboard);
 
-            if (reply.imageUrl != null && reply.characterName != null)
+            if (reply.imageUrl != null && reply.shareText != null)
             {
                 var sendPhoto = new SendPhoto();
                 sendPhoto.setChatId(update.getMessage().getChatId());
@@ -80,10 +88,9 @@ public class TelegramBot extends TelegramLongPollingBot {
                 row.add(new InlineKeyboardButton()
                         .setText("Рассказать в VK")
                         .setUrl(String.format(vkShareUrl,
-                                URLEncoder.encode("https://t.me/winxx_bot", StandardCharsets.UTF_8),
-                                URLEncoder.encode(String.format("Я - %s из Winx. А ты?", reply.characterName),
-                                        StandardCharsets.UTF_8),
-                                URLEncoder.encode(reply.imageUrl, StandardCharsets.UTF_8))));
+                                URLEncoder.encode(String.format("https://t.me/%s", BOT_USERNAME), "UTF-8"),
+                                URLEncoder.encode(reply.shareText, "UTF-8"),
+                                URLEncoder.encode(reply.imageUrl, "UTF-8"))));
                 inlineRows.add(row);
                 inlineMarkup.setKeyboard(inlineRows);
                 sendPhoto.setReplyMarkup(inlineMarkup);
@@ -91,14 +98,14 @@ public class TelegramBot extends TelegramLongPollingBot {
                 execute(sendPhoto);
             }
             execute(sendMessage);
-        } catch (TelegramApiException e) {
+        } catch (TelegramApiException | UnsupportedEncodingException e) {
             e.printStackTrace();
         }
     }
 
     private ReplyKeyboardMarkup makeKeyboard(List<String> options) {
         ReplyKeyboardMarkup replyKeyboardMarkup = new ReplyKeyboardMarkup();
-        replyKeyboardMarkup.setResizeKeyboard(false);
+        replyKeyboardMarkup.setResizeKeyboard(true);
         replyKeyboardMarkup.setOneTimeKeyboard(true);
 
         List<KeyboardRow> keyboardRows = new ArrayList<>();
@@ -110,5 +117,43 @@ public class TelegramBot extends TelegramLongPollingBot {
 
         replyKeyboardMarkup.setKeyboard(keyboardRows);
         return replyKeyboardMarkup;
+    }
+
+    private String getFileContent(String url) {
+        try {
+            URL fileUrl = new URL(url);
+            BufferedReader in = new BufferedReader(new InputStreamReader(fileUrl.openStream()));
+            String inputLine;
+            StringBuilder content = new StringBuilder();
+            while ((inputLine = in.readLine()) != null) {
+                content.append(inputLine);
+                content.append('\n');
+            }
+            in.close();
+            return content.toString();
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+
+        return null;
+    }
+
+    private String getFileContent(Document document) {
+        try {
+            GetFile getFile = new GetFile();
+            getFile.setFileId(document.getFileId());
+            File filePath = execute(getFile);
+            java.io.File file = downloadFile(filePath);
+
+            Scanner scanner = new Scanner(file).useDelimiter("\\Z");
+            String content = scanner.next();
+            scanner.close();
+
+            return content;
+        } catch (TelegramApiException | FileNotFoundException e) {
+            e.printStackTrace();
+        }
+
+        return null;
     }
 }
